--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -41,7 +41,10 @@ label {
     -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
-
+.checkBox {
+   
+    justify-content: center;
+}
 .profile-img-card {
     width: 96px;
     height: 96px;
